--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="domination.html">Domination</a></li>
                                         <li><a href="massages.html">Massages</a></li>
                                         <li><a href="show.html">Show</a></li>
 
@@ -80,7 +79,7 @@
                     <img class="first-slide" src="img/img3.jpg" alt="First slide" width="200" height="200" style="align-content: center">
                     <div class="container">
                         <div class="carousel-caption">
-                            <h1 style="color: black">Domination</h1>                                                    
+                            <h1 style="color: black">Erotismo</h1>                                                    
                         </div>
                     </div>
                 </div>
