--- a/show.html
+++ b/show.html
@@ -55,7 +55,7 @@
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="domination.html">Striptease a domicile</a></li>
+                                        <li><a href="#">Striptease a domicile</a></li>
                                         <li><a href="massages.html">Une animation Pole dance</a></li>
                                         <li><a href="show.html">Location de bar</a></li>
 
